kubernetes/main/platform/flux-tools/capacitator/app/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app capacitator
  namespace: flux-system
  labels:
    app: *app
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9000
  selector:
    app: *app
