kubernetes/main/platform/flux-tools/capacitator/app/HttpRoute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app capacitator
  namespace: flux-system
  labels:
    gateway-label: internal-gateway
spec:
  hostnames:
    - flux.local.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: default
  rules:
    - matches:
      backendRefs:
        - name: *app
          port: 9000
